Creado mediante Colaboratory

--- a/Estadisticas_del_homicidios_periodo_2019_?.ipynb
+++ b/Estadisticas_del_homicidios_periodo_2019_?.ipynb
@@ -6,7 +6,7 @@
       "name": "Estadisticas del homicidios periodo 2019-?.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyMrELZENbuwAoVlQzui1cDR",
+      "authorship_tag": "ABX9TyO6/Hv9eYuvTtX5VIeBzoTS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -142,7 +142,7 @@
         "        plt.figure(figsize=(7.5,7.5))\n",
         "        plt.show()\n",
         "\n",
-        "        dataset = pd.DataFrame(data = [fechas,cifrastotales], columns=cabeceras)\n",
+        "        dataset = pd.DataFrame(data = [fechas,cifrasTotales], columns=cabeceras)\n",
         "        print(dataset)\n",
         "\n",
         "\n",
